DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Aug-18-2003 patrickh    Exposed vrj::OsgApp so that developers can combine
                        PyJuggler and PyOSG.
                        NEW VERSION: 0.8.1
Aug-03-2003 patrickh    Updated to JCCL 0.12, Gadgeteer 0.13, and VR Juggler
                        1.1.144.
                        NEW VERSION: 0.8.0
Jul-09-2003 patrickh    Reorganized the way the modules are exposed to Python
                        so that the code can be loaded from a single DSO/DLL.
                        This is being done to fix runtime loader problems on
                        Windows.
                        NEW VERSION: 0.7.1
Jun-30-2003 patrickh    Separated the source for the vpr, gadget, and vrj
                        modules into multiple .cpp files.
Jun-26-2003 patrickh    Removed the vjAvatar bindings.  They now live along
                        side the vjAvatar C++ code.
                        NEW VERSION: 0.7.0
Jun-13-2003 patrickh    Removed setter methods from vrj.Display and related
                        classes.  These now act as read-only objects when
                        accessed from Python.
                        NEW VERSION: 0.6.0
May-21-2003 patrickh    Updated to Gadgeteer 0.12.0 API.
                        NEW VERSION: 0.5.1
May-21-2003 patrickh    Removed the GMTL bindings.  They now live in the PyGMTL
                        project.
                        NEW VERSION: 0.5.0
May-02-2003 patrickh    Exposed vrj::Frustum().
                        NEW VERSION: 0.4.13
May-02-2003 patrickh    Exposed gmtl::setFrustum() and gmtl::setPerspective().
                        NEW VERSION: 0.4.12
May-02-2003 patrickh    gmtl.intersect() now returns a tuple with varying
                        information depending on the intersection test being
                        performed.
                        NEW VERSION: 0.4.11